--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "react-native": "0.74.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.1",
